# azpmc

./: Cargo.toml
src/: app.rs  main.rs  render_state.rs  settings.rs  vectors.rs
src/physics/: aabb.rs  entity.rs  mod.rs
src/rendering/: camera.rs  light.rs  mesh.rs  mod.rs  render_state.rs  textures.rs  vertex.rs
src/shaders/: main.wgsl  shader.wgsl  shadow.wgsl
src/ui/: mod.rs  state.rs
src/world/: block.rs  chunk.rs  entity.rs  generation.rs  mod.rs  player.rs
