[package]
name = "azpmc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30" }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0.0"
pollster = "0.3"
tokio = { version = "1.48", features = ["full"] }
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
noise = "0.9.0"
rand = "0.9.2"
imgui-wgpu = "0.25.0"
imgui = "0.12.0"
imgui-winit-support = "0.13.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]
